--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - sudo apt-get install -y shellcheck
 
 script:
-  - shellcheck bump_version.sh tag.sh report.sh
+  - shellcheck bump_version.sh tag.sh report.sh travis_scripts/*.sh
   - bash travis_scripts/build_docker_image.sh
 
 deploy:
