Remove unsupported hardware platforms
See #45 for more details.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,13 @@ env:
   BUILDX_CACHE_DIR: ~/.cache/buildx
   IMAGE_NAME: cisagov/example
   PIP_CACHE_DIR: ~/.cache/pip
-  PLATFORMS: "linux/amd64,linux/arm/v6,linux/arm/v7,\
-  linux/arm64,linux/ppc64le,linux/s390x"
+  # The Debian Stretch + Python 3.6 Docker container upon which this
+  # container is based does not support all the platforms listed
+  # below.  This can probably be remedied by upgrading to a newer base
+  # container.  See #45 for more details.
+  # PLATFORMS: "linux/amd64,linux/arm/v6,linux/arm/v7,\
+  # linux/arm64,linux/ppc64le,linux/s390x"
+  PLATFORMS: "linux/amd64,linux/arm/v7,linux/arm64"
   PRE_COMMIT_CACHE_DIR: ~/.cache/pre-commit
 
 jobs:
