--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ on:
 
 env:
   BUILDX_CACHE_DIR: ~/.cache/buildx
-  IMAGE_NAME: cisagov/example
+  IMAGE_NAME: cisagov/trustymail_reporter
   PIP_CACHE_DIR: ~/.cache/pip
   # The Debian Stretch + Python 3.6 Docker container upon which this
   # container is based does not support all the platforms listed
